dacpac_deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: dacpac-service
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 1443
      targetPort: 1443
